[project]
name = "comfyui-mirror"
description = "Nodes: Latent Mirror. Node to mirror a latent along the Y (vertical / left to right) or X (horizontal / top to bottom) axis."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/spro/comfyui-mirror"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-mirror"
Icon = ""
